updated incompletedata ipynb with new database location and playtracker data (for some reason the 4th cell does not terminate)

--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -2,62 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    app_id                                               tags  \\\n",
-      "1   536280  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...   \n",
-      "2   982800  [Strategy, Simulation, Indie, Management, Sing...   \n",
-      "3   767960  [Strategy, Indie, Education, RTS, Real-Time, S...   \n",
-      "4  1368670  [Sports, Action, Arcade, Character Action Game...   \n",
-      "5   977800  [Strategy, Adventure, Free to Play, RPG, Indie...   \n",
+      "    app_id                               name          category  \\\n",
+      "0   536280                     Disintegration      Action Games   \n",
+      "1   982800                        Moon Tycoon  Simulation Games   \n",
+      "2   767960                           Math RTS    Strategy Games   \n",
+      "3  1368670  Beach Volleyball Competition 2020      Sports Games   \n",
+      "4   977800          At Home Alone - Reward 5$   Adventure Games   \n",
       "\n",
-      "                                     reviews  \n",
-      "1  {'overall': {'rating': 61, 'count': 120}}  \n",
-      "2           {'overall': 'need_more_reviews'}  \n",
-      "3           {'overall': 'need_more_reviews'}  \n",
-      "4           {'overall': 'need_more_reviews'}  \n",
-      "5           {'overall': 'need_more_reviews'}  \n",
-      "(76227, 3)\n"
+      "                                                tags  \\\n",
+      "0  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...   \n",
+      "1  [Strategy, Simulation, Indie, Management, Sing...   \n",
+      "2  [Strategy, Indie, Education, RTS, Real-Time, S...   \n",
+      "3  [Sports, Action, Arcade, Character Action Game...   \n",
+      "4  [Strategy, Adventure, Free to Play, RPG, Indie...   \n",
+      "\n",
+      "                                     reviews  \\\n",
+      "0  {'overall': {'rating': 61, 'count': 120}}   \n",
+      "1           {'overall': 'need_more_reviews'}   \n",
+      "2           {'overall': 'need_more_reviews'}   \n",
+      "3           {'overall': 'need_more_reviews'}   \n",
+      "4           {'overall': 'need_more_reviews'}   \n",
+      "\n",
+      "                                         playtracker  \n",
+      "0  {'popularity': 2, 'estimated_players': 159000,...  \n",
+      "1                                                NaN  \n",
+      "2                                                NaN  \n",
+      "3                                                NaN  \n",
+      "4                                                NaN  \n",
+      "(76221, 6)\n"
      ]
     }
    ],
    "source": [
     "import pandas\n",
+    "from tinydb import TinyDB\n",
     "import numpy\n",
     "\n",
-    "data = pandas.read_json(\"db.json\")\n",
-    "data = data.T\n",
+    "data = pandas.DataFrame(TinyDB('data/db/db.json').table('games').all())\n",
     "print(data.head())\n",
     "print(data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    app_id                                               tags  \\\n",
-      "1   536280  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...   \n",
-      "2   982800  [Strategy, Simulation, Indie, Management, Sing...   \n",
-      "3   767960  [Strategy, Indie, Education, RTS, Real-Time, S...   \n",
-      "4  1368670  [Sports, Action, Arcade, Character Action Game...   \n",
-      "5   977800  [Strategy, Adventure, Free to Play, RPG, Indie...   \n",
+      "    app_id                               name          category  \\\n",
+      "0   536280                     Disintegration      Action Games   \n",
+      "1   982800                        Moon Tycoon  Simulation Games   \n",
+      "2   767960                           Math RTS    Strategy Games   \n",
+      "3  1368670  Beach Volleyball Competition 2020      Sports Games   \n",
+      "4   977800          At Home Alone - Reward 5$   Adventure Games   \n",
+      "\n",
+      "                                                tags  \\\n",
+      "0  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...   \n",
+      "1  [Strategy, Simulation, Indie, Management, Sing...   \n",
+      "2  [Strategy, Indie, Education, RTS, Real-Time, S...   \n",
+      "3  [Sports, Action, Arcade, Character Action Game...   \n",
+      "4  [Strategy, Adventure, Free to Play, RPG, Indie...   \n",
+      "\n",
+      "                                         playtracker  \\\n",
+      "0  {'popularity': 2, 'estimated_players': 159000,...   \n",
+      "1                                                NaN   \n",
+      "2                                                NaN   \n",
+      "3                                                NaN   \n",
+      "4                                                NaN   \n",
       "\n",
       "                        overall  \n",
-      "1  {'rating': 61, 'count': 120}  \n",
+      "0  {'rating': 61, 'count': 120}  \n",
+      "1                           NaN  \n",
       "2                           NaN  \n",
       "3                           NaN  \n",
-      "4                           NaN  \n",
-      "5                           NaN  \n"
+      "4                           NaN  \n"
      ]
     }
    ],
@@ -71,26 +99,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    app_id                                               tags  review_count  \\\n",
-      "1   536280  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...         120.0   \n",
-      "2   982800  [Strategy, Simulation, Indie, Management, Sing...           NaN   \n",
-      "3   767960  [Strategy, Indie, Education, RTS, Real-Time, S...           NaN   \n",
-      "4  1368670  [Sports, Action, Arcade, Character Action Game...           NaN   \n",
-      "5   977800  [Strategy, Adventure, Free to Play, RPG, Indie...           NaN   \n",
+      "    app_id                               name          category  \\\n",
+      "0   536280                     Disintegration      Action Games   \n",
+      "1   982800                        Moon Tycoon  Simulation Games   \n",
+      "2   767960                           Math RTS    Strategy Games   \n",
+      "3  1368670  Beach Volleyball Competition 2020      Sports Games   \n",
+      "4   977800          At Home Alone - Reward 5$   Adventure Games   \n",
       "\n",
-      "   rating  \n",
-      "1    61.0  \n",
-      "2     NaN  \n",
-      "3     NaN  \n",
-      "4     NaN  \n",
-      "5     NaN  \n"
+      "                                                tags  \\\n",
+      "0  [FPS, PvE, Vehicular Combat, RTS, Shooter, Str...   \n",
+      "1  [Strategy, Simulation, Indie, Management, Sing...   \n",
+      "2  [Strategy, Indie, Education, RTS, Real-Time, S...   \n",
+      "3  [Sports, Action, Arcade, Character Action Game...   \n",
+      "4  [Strategy, Adventure, Free to Play, RPG, Indie...   \n",
+      "\n",
+      "                                         playtracker  review_count  rating  \n",
+      "0  {'popularity': 2, 'estimated_players': 159000,...         120.0    61.0  \n",
+      "1                                                NaN           NaN     NaN  \n",
+      "2                                                NaN           NaN     NaN  \n",
+      "3                                                NaN           NaN     NaN  \n",
+      "4                                                NaN           NaN     NaN  \n"
      ]
     }
    ],
@@ -103,44 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    app_id  review_count  rating\n",
-      "1   536280         120.0    61.0\n",
-      "2   982800           NaN     NaN\n",
-      "3   767960           NaN     NaN\n",
-      "4  1368670           NaN     NaN\n",
-      "5   977800           NaN     NaN\n",
-      "   1980s  1990's  2.5D  2D  2D Fighter  2D Platformer  360 Video  3D  \\\n",
-      "1      0       0     0   0           0              0          0   0   \n",
-      "2      0       0     0   0           0              0          0   0   \n",
-      "3      0       0     0   0           0              0          0   0   \n",
-      "4      0       0     1   1           0              0          0   0   \n",
-      "5      0       0     0   0           0              0          0   0   \n",
-      "\n",
-      "   3D Fighter  3D Platformer  ...  Web Publishing  Well-Written  Werewolves  \\\n",
-      "1           0              0  ...               0             0           0   \n",
-      "2           0              0  ...               0             0           0   \n",
-      "3           0              0  ...               0             0           0   \n",
-      "4           0              0  ...               0             0           0   \n",
-      "5           0              0  ...               0             0           0   \n",
-      "\n",
-      "   Western  Word Game  World War I  World War II  Wrestling  Zombies  eSports  \n",
-      "1        0          0            0             0          0        0        0  \n",
-      "2        0          0            0             0          0        0        0  \n",
-      "3        0          0            0             0          0        0        0  \n",
-      "4        0          0            0             0          0        0        0  \n",
-      "5        0          0            0             0          0        0        0  \n",
-      "\n",
-      "[5 rows x 422 columns]\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Splitting the dataset into two to make operations for tags easier:\n",
     "game_info = data.copy()\n",
@@ -149,6 +153,7 @@
     "del tags['app_id']\n",
     "del tags['review_count']\n",
     "del tags['rating']\n",
+    "del tags['playtracker']\n",
     "# Creating a column for each tag:\n",
     "tags = pandas.get_dummies(tags)\n",
     "tags.rename(columns=lambda x: x.split(\"_\")[1], inplace=True)\n",
@@ -159,39 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    app_id  review_count  rating  1980s  1990's  2.5D  2D  2D Fighter  \\\n",
-      "1   536280         120.0    61.0      0       0     0   0           0   \n",
-      "2   982800           NaN     NaN      0       0     0   0           0   \n",
-      "3   767960           NaN     NaN      0       0     0   0           0   \n",
-      "4  1368670           NaN     NaN      0       0     1   1           0   \n",
-      "5   977800           NaN     NaN      0       0     0   0           0   \n",
-      "\n",
-      "   2D Platformer  360 Video  ...  Web Publishing  Well-Written  Werewolves  \\\n",
-      "1              0          0  ...               0             0           0   \n",
-      "2              0          0  ...               0             0           0   \n",
-      "3              0          0  ...               0             0           0   \n",
-      "4              0          0  ...               0             0           0   \n",
-      "5              0          0  ...               0             0           0   \n",
-      "\n",
-      "   Western  Word Game  World War I  World War II  Wrestling  Zombies  eSports  \n",
-      "1        0          0            0             0          0        0        0  \n",
-      "2        0          0            0             0          0        0        0  \n",
-      "3        0          0            0             0          0        0        0  \n",
-      "4        0          0            0             0          0        0        0  \n",
-      "5        0          0            0             0          0        0        0  \n",
-      "\n",
-      "[5 rows x 425 columns]\n",
-      "(76227, 425)\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Merging the tables back together:\n",
     "games = game_info.merge(tags, left_index=True, right_index=True)\n",
@@ -201,22 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1    1\n",
-      "2    1\n",
-      "3    1\n",
-      "4    0\n",
-      "5    1\n",
-      "Name: Strategy, dtype: uint8\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Checking if the tags seem right for tag \"Strategy\":\n",
     "print(games[\"Strategy\"].head())\n",
@@ -225,40 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "app_id              0\n",
-      "review_count    43746\n",
-      "rating          43746\n",
-      "1980s               0\n",
-      "1990's              0\n",
-      "                ...  \n",
-      "World War I         0\n",
-      "World War II        0\n",
-      "Wrestling           0\n",
-      "Zombies             0\n",
-      "eSports             0\n",
-      "Length: 425, dtype: int64\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# Checking for nas:\n",
     "print(games.isnull().sum())\n",
-    "# For more than half of the games review data is missing."
+    "# For more than half of the games review data is missing.\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
