Deleted rating from x for regression.

--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1123,16 +1123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared train: 0.4312673253081065\n",
-      "R-squared test: 0.3953723496917706\n",
-      "RMSE: 395108.9403367848\n",
+      "R-squared train: 0.4209292541310705\n",
+      "R-squared test: 0.38194306515511267\n",
+      "RMSE: 399472.69236187125\n",
       "140085.60109198166\n"
      ]
     }
@@ -1147,6 +1147,7 @@
     "del x['release_date']\n",
     "del x['popularity']\n",
     "del x['review_count']\n",
+    "del x['rating']\n",
     "y = pandas.DataFrame(games['estimated_players'])\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.8, random_state = 206, shuffle=True)\n",
     "# Running a linear regression with all (structured) columns:\n",
