--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -2034,7 +2034,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Training a multi layer Perceptron Regressor:\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "multPerceptronReg = MLPRegressor(random_state=1, max_iter=500).fit(x_train, y_train)\n",
+    "predperctron = multPerceptronReg.predict(x_test)\n",
+    "print(\"Accuracy Mmultilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
+    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predperctron)))\n",
+    "print(games['estimated_players'].mean())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Make Predictions with a Lasso\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "lassoModel = LassoCV()\n",
+    "lassoModel.fit(x_train, y_train)\n",
+    "print(\"Best alpha using built-in LassoCV: %f\" % lassoModel.alpha_)\n",
+    "print(\"Best score using built-in LassoCV: %f\" %lassoModel.score(x_test, y_test))\n",
+    "coef = pandas.Series(lassoModel.coef_, index = x_train.columns)\n",
+    "label_y_predict_lasso = lassoModel.predict(x_test)\n",
+    "print(\"LassoCV choose \" + str(sum(coef != 0)) + \" variables and dropped the other \" +  str(sum(coef == 0)) + \" to zero a like.\")\n",
+    "coeffs_sorted = coef.sort_values()\n",
+    "matplotlib.rcParams['figure.figsize'] = (10.0, 12.0)\n",
+    "coeffs_sorted[200:].plot(kind = \"barh\")\n",
+    "plt.title(\"Features (variables) and its importance choosen by LassoCV\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Make Predictions using TPOT\n",
+    "from tpot import TPOTRegressor\n",
+    "tpot = TPOTRegressor()\n",
+    "tpot.fit(x_train, y_train)\n",
+    "print(\"Accuracy TPOT:\", tpot.score(x_test, y_test))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -2054,6 +2109,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
