--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -15,7 +15,7 @@
     "import statsmodels.api as sm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error,accuracy_score\n",
+    "from sklearn.metrics import mean_squared_error,accuracy_score, mean_squared_log_error, median_absolute_error\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.neural_network import MLPRegressor\n",
@@ -770,7 +770,7 @@
    "source": [
     "# Dropping the rows where 'estimated_players' is na as it is the variable we want to predict.\n",
     "games = games[games['estimated_players'].notna()]\n",
-    "# Dropping the rows where 'rating' is na as well as those are online about 4500 and would \n",
+    "# Dropping the rows where 'rating' is na as well as those are online about 4500 and would\n",
     "# hinder our predictions otherwise:\n",
     "games = games[games['rating'].notna()]\n",
     "print(games.isnull().sum())\n",
@@ -862,7 +862,7 @@
     "# It's visible that for the playtracker and review data more than 50% have the value 0. This\n",
     "# is a consequence of the imputation. But as mentioned, it is assumed that the data was missing\n",
     "# because these were games that no one plays.\n",
-    "# It's also visible that most games have no discount (75% quantil still 0) and most of them are \n",
+    "# It's also visible that most games have no discount (75% quantil still 0) and most of them are\n",
     "# relatively new."
    ]
   },
@@ -1305,7 +1305,7 @@
     "mat.title('Distribution of player count')\n",
     "mat.xlabel('Estimated number of players')\n",
     "mat.show()\n",
-    "# There are very few games that have more than 5,000,000 players and most games seem to have less than \n",
+    "# There are very few games that have more than 5,000,000 players and most games seem to have less than\n",
     "# 1,000,000 players."
    ]
   },
@@ -1493,7 +1493,8 @@
     "del x['review_count']\n",
     "del x['rating']\n",
     "del x['average_playtime']\n",
-    "y = pandas.DataFrame(games['estimated_players'])\n",
+    "y = pandas.DataFrame(numpy.log(games['estimated_players']))\n",
+    "y[numpy.isneginf(y)] = 0\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.8, random_state = 206, shuffle=True)"
    ]
   },
@@ -2083,7 +2084,8 @@
     "x_test_c = sm.add_constant(x_test)\n",
     "model = sm.OLS(y_train, x_train_c).fit()\n",
     "pred = model.predict(x_test_c)\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, pred)))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred)))\n",
     "print(games['estimated_players'].mean())\n",
     "model_summary = model.summary()\n",
     "print(model_summary)"
@@ -2105,12 +2107,13 @@
     }
    ],
    "source": [
-    "# Training a Decision Tree Regressor: \n",
+    "# Training a Decision Tree Regressor:\n",
     "model2 = DecisionTreeRegressor(random_state=42)\n",
     "result2 = model2.fit(x_train, y_train)\n",
     "pred2 = result2.predict(x_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, pred2))\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, pred2)))\n",
+    "print(\"Accuracy:\", result2.score(x_test, y_test))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred2)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred2)))\n",
     "print(games['estimated_players'].mean())\n",
     "# The accuracy for a decision tree regressor seems much better, but the RMSE got only very slightly better."
    ]
@@ -2144,7 +2147,8 @@
     "result3 = model3.fit(x_train, y_train)\n",
     "pred3 = result3.predict(x_test)\n",
     "print(\"Accuracy:\", result3.score(x_test, y_test))\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, pred3)))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred3)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred3)))\n",
     "print(games['estimated_players'].mean())\n",
     "# With the random tree regressor, though the accuracy got a bit worse, the RMSE improved quite a bit."
    ]
@@ -2184,8 +2188,9 @@
     "# Training a multi layer Perceptron Regressor:\n",
     "multPerceptronReg = MLPRegressor(random_state=1, max_iter=500).fit(x_train, y_train)\n",
     "predperctron = multPerceptronReg.predict(x_test)\n",
-    "print(\"Accuracy Mmultilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predperctron)))\n",
+    "print(\"Score Mmultilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predperctron)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, predperctron)))\n",
     "print(games['estimated_players'].mean())"
    ]
   },
@@ -2261,7 +2266,8 @@
     "print(\"Best score using built-in LassoCV: %f\" % lassoModel.score(x_test, y_test))\n",
     "coef = pandas.Series(lassoModel.coef_, index = x_train.columns)\n",
     "label_y_predict_lasso = lassoModel.predict(x_test)\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, label_y_predict_lasso)))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, label_y_predict_lasso)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, label_y_predict_lasso)))\n",
     "print(\"LassoCV chose\", str(sum(coef != 0)), \"variables and dropped the other\",  str(sum(coef == 0)), \"to zero a like.\")\n",
     "coeffs_sorted = coef.sort_values()\n",
     "matplotlib.rcParams['figure.figsize'] = (10.0, 12.0)\n",
@@ -2283,8 +2289,9 @@
     "tpot = TPOTRegressor()\n",
     "tpot.fit(x_train, y_train)\n",
     "predtpot = tpot.predict(x_test)\n",
-    "print(\"Accuracy TPOT:\", tpot.score(x_test, y_test))\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predtpot)))"
+    "print(\"Score TPOT:\", tpot.score(x_test, y_test))\n",
+    "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predtpot)))\n",
+    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, predtpot)))"
    ]
   }
  ],
@@ -2309,10 +2316,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
