--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -2085,7 +2085,7 @@
     "model = sm.OLS(y_train, x_train_c).fit()\n",
     "pred = model.predict(x_test_c)\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, pred))\n",
     "print(games['estimated_players'].mean())\n",
     "model_summary = model.summary()\n",
     "print(model_summary)"
@@ -2113,7 +2113,7 @@
     "pred2 = result2.predict(x_test)\n",
     "print(\"Accuracy:\", result2.score(x_test, y_test))\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred2)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred2)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, pred2))\n",
     "print(games['estimated_players'].mean())\n",
     "# The accuracy for a decision tree regressor seems much better, but the RMSE got only very slightly better."
    ]
@@ -2148,7 +2148,7 @@
     "pred3 = result3.predict(x_test)\n",
     "print(\"Accuracy:\", result3.score(x_test, y_test))\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred3)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, pred3)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, pred3))\n",
     "print(games['estimated_players'].mean())\n",
     "# With the random tree regressor, though the accuracy got a bit worse, the RMSE improved quite a bit."
    ]
@@ -2190,7 +2190,7 @@
     "predperctron = multPerceptronReg.predict(x_test)\n",
     "print(\"Score Mmultilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predperctron)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, predperctron)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, predperctron))\n",
     "print(games['estimated_players'].mean())"
    ]
   },
@@ -2267,7 +2267,7 @@
     "coef = pandas.Series(lassoModel.coef_, index = x_train.columns)\n",
     "label_y_predict_lasso = lassoModel.predict(x_test)\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, label_y_predict_lasso)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, label_y_predict_lasso)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, label_y_predict_lasso))\n",
     "print(\"LassoCV chose\", str(sum(coef != 0)), \"variables and dropped the other\",  str(sum(coef == 0)), \"to zero a like.\")\n",
     "coeffs_sorted = coef.sort_values()\n",
     "matplotlib.rcParams['figure.figsize'] = (10.0, 12.0)\n",
@@ -2291,7 +2291,7 @@
     "predtpot = tpot.predict(x_test)\n",
     "print(\"Score TPOT:\", tpot.score(x_test, y_test))\n",
     "print(\"MSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predtpot)))\n",
-    "print(\"MAE:\", numpy.sqrt(median_absolute_error(y_test, predtpot)))"
+    "print(\"MAE:\", median_absolute_error(y_test, predtpot))"
    ]
   }
  ],
