--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -2131,7 +2131,9 @@
     "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred2)))\n",
     "print(\"MAE:\", median_absolute_error(y_test, pred2))\n",
     "print(y['estimated_players'].mean())\n",
-    "# The accuracy for a decision tree regressor seems much better, but the RMSE got only very slightly better."
+    "# Though the accuracy and RMSE got worse for the decision tree regression, the RMSLE got better. This\n",
+    "# indicates that the decision tree model is better in predicting the majority of the data, but worse for\n",
+    "# outliers as RMSLE is less sensitive for outliers."
    ]
   },
   {
@@ -2168,8 +2170,8 @@
     "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, pred3)))\n",
     "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, pred3)))\n",
     "print(\"MAE:\", median_absolute_error(y_test, pred3))\n",
-    "print(games['estimated_players'].mean())\n",
-    "# With the random tree regressor, though the accuracy got a bit worse, the RMSE improved quite a bit."
+    "print(y['estimated_players'].mean())\n",
+    "# This seems to be the best model yet as all measures except MAE improved."
    ]
   },
   {
@@ -2206,7 +2208,8 @@
     "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predperctron)))\n",
     "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predperctron)))\n",
     "print(\"MAE:\", median_absolute_error(y_test, predperctron))\n",
-    "print(games['estimated_players'].mean())"
+    "print(y['estimated_players'].mean())\n",
+    "# The perceptron performed worse than random forest in all aspects."
    ]
   },
   {
@@ -2293,7 +2296,8 @@
     "coeffs_sorted = coef.sort_values()\n",
     "matplotlib.rcParams['figure.figsize'] = (10.0, 12.0)\n",
     "coeffs_sorted[200:].plot(kind = \"barh\")\n",
-    "mat.title(\"Features (variables) and its importance choosen by LassoCV\")"
+    "mat.title(\"Features (variables) and its importance choosen by LassoCV\")\n",
+    "# Lasso also performed worse than random forest in all aspects."
    ]
   },
   {
