Removed tpot and added tuned xgboost (still worse than random forest).

--- a/Project_incompletedata.ipynb
+++ b/Project_incompletedata.ipynb
@@ -21,7 +21,7 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "import matplotlib\n",
     "from sklearn.linear_model import LassoCV\n",
-    "from tpot import TPOTRegressor"
+    "import xgboost as xgb"
    ]
   },
   {
@@ -1525,8 +1525,8 @@
       "Dep. Variable:      estimated_players   R-squared:                       0.477\n",
       "Model:                            OLS   Adj. R-squared:                  0.470\n",
       "Method:                 Least Squares   F-statistic:                     66.96\n",
-      "Date:                Sun, 04 Oct 2020   Prob (F-statistic):               0.00\n",
-      "Time:                        18:26:54   Log-Likelihood:            -1.0745e+05\n",
+      "Date:                Tue, 06 Oct 2020   Prob (F-statistic):               0.00\n",
+      "Time:                        07:13:59   Log-Likelihood:            -1.0745e+05\n",
       "No. Observations:               38242   AIC:                         2.159e+05\n",
       "Df Residuals:                   37727   BIC:                         2.203e+05\n",
       "Df Model:                         514                                         \n",
@@ -2138,14 +2138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-35-e8a0ba3100df>:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "<ipython-input-83-fc5b1b8f7000>:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  result3 = model3.fit(x_train, y_train)\n"
      ]
     },
@@ -2157,7 +2157,7 @@
       "RMSE: 3.0103174241812156\n",
       "RMSLE: 0.7310734912782081\n",
       "MAE: 0.3398807923419991\n",
-      "140085.60109198166\n"
+      "3.627569529942997\n"
      ]
     }
    ],
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2191,11 +2191,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score Mmultilayer Perceptron Regressor: 0.5101146594376487\n",
+      "Score Multilayer Perceptron Regressor: 0.5101146594376487\n",
       "RMSE: 3.6437354762053347\n",
       "RMSLE: 0.8320418710248237\n",
       "MAE: 0.6645650792533894\n",
-      "140085.60109198166\n"
+      "3.627569529942997\n"
      ]
     }
    ],
@@ -2204,7 +2204,7 @@
     "multPerceptronReg = MLPRegressor(random_state=1, max_iter=500).fit(x_train, y_train)\n",
     "# Avoiding negative predictions:\n",
     "predperctron = numpy.maximum(0., multPerceptronReg.predict(x_test))\n",
-    "print(\"Score Mmultilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
+    "print(\"Score Multilayer Perceptron Regressor:\", multPerceptronReg.score(x_test, y_test))\n",
     "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predperctron)))\n",
     "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predperctron)))\n",
     "print(\"MAE:\", median_absolute_error(y_test, predperctron))\n",
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -2248,7 +2248,7 @@
        "Text(0.5, 1.0, 'Features (variables) and its importance choosen by LassoCV')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2302,23 +2302,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6662018963063729\n",
+      "RMSE: 3.147555957073363\n",
+      "RMSLE: 0.7884911783271892\n",
+      "MAE: 0.8234999179840088\n",
+      "3.627569529942997\n"
+     ]
+    }
+   ],
    "source": [
-    "#Make Predictions using TPOT\n",
-    "tpot = TPOTRegressor()\n",
-    "tpot.fit(x_train, y_train)\n",
-    "predtpot = tpot.predict(x_test)\n",
-    "print(\"Score TPOT:\", tpot.score(x_test, y_test))\n",
-    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, predtpot)))\n",
-    "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, predtpot)))\n",
-    "print(\"MAE:\", median_absolute_error(y_test, predtpot))"
+    "#Make Predictions using xgboost:\n",
+    "xgbreg = xgb.XGBRegressor(colsample_bytree=0.7, learning_rate=0.5, max_depth=7, n_estimators=110, subsample=0.8, reg_alpha=0.6, random_state=42) \n",
+    "xgb_result = xgbreg.fit(x_train, y_train)\n",
+    "xgb_pred = numpy.maximum(0., xgb_result.predict(x_test))\n",
+    "print(\"Accuracy:\", xgb_result.score(x_test, y_test))\n",
+    "print(\"RMSE:\", numpy.sqrt(mean_squared_error(y_test, xgb_pred)))\n",
+    "print(\"RMSLE:\", numpy.sqrt(mean_squared_log_error(y_test, xgb_pred)))\n",
+    "print(\"MAE:\", median_absolute_error(y_test, xgb_pred))\n",
+    "print(y['estimated_players'].mean())\n",
+    "# xgboost performs worse than Random Forest for all measures."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
