Changed name for category file for the file itself and in app.py.

--- a/Steam_Project.ipynb
+++ b/Steam_Project.ipynb
@@ -1677,7 +1677,7 @@
    "metadata": {},
    "source": [
     "### Disclaimer: This correlation matrix looked different in earlier executions. Therefore, an interpretation was possible.\n",
-    "This correlation matrix is of course not very readable, but as the color indicates the correlation and the whole graph is a lighter or darker shade of violet, it seems that there are no/very few correlations that 0.3/-0.3. There'll be no correlation matrix for tags as there are to many of them.\n",
+    "This correlation matrix is of course not very readable, but as the color indicates the correlation and the whole graph is a lighter or darker shade of violet, it seems that there are no/very few correlations that surpass 0.3/-0.3. There'll be no correlation matrix for tags as there are to many of them.\n",
     "### Correlation matrix for other columns:"
    ]
   },
